Bomb carrier is an be bought as secondary weapon; bombs can be bought (trigger and time bomb); bomb carrier can be loaded with single bomb; bomb can be dropped with right mouse button and triggered with SPACE key

--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,8 @@ body {font-family: Verdana;}
   color: white;
   font-size: 20px;
 }
+
+.vertical div {
+  position:relative;
+  display : block;
+}
