--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,7 @@ body {font-family: Verdana;}
 
 button:disabled,
 button[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
+  opacity: 0.5; 
 }
 
           
