--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {font-family: Verdana;}
 
+
 /* Style the tab */
 .tab {
   overflow: hidden;
@@ -40,6 +41,16 @@ body {font-family: Verdana;}
   text-align: center;
 }
 
+/* Style the tab content */
+.mainDivContent {
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
+  border: 5px outset lightseagreen;
+  background-color: lightblue;    
+  text-align: center;
+}
+
 .btn {
     background-color:red;
     font:bold 14px Arial;
@@ -48,6 +59,7 @@ body {font-family: Verdana;}
     background-color:lightsteelblue;
     vertical-align: middle;
 }
+
 .btn-group button {
     background-color: #04AA6D; /* Green background */
     border: 1px solid green; /* Green border */
@@ -68,22 +80,40 @@ body {font-family: Verdana;}
     .btn-group button:hover {
     background-color: #3e8e41;
 }
+
+button:disabled,
+button[disabled]{
+  opacity: 0.5; 
+}
+
           
 /* The grid: Four equal columns that floats next to each other */
 .column {
   float: left;
   width: 25%;
-  padding: 10px;
+  padding: 5px;
 }
 
 /* Style the images inside the grid */
 .column img {
-  opacity: 0.8; 
+  opacity: 0.5; 
   cursor: pointer; 
 }
 
 .column img:hover {
   opacity: 1;
+}
+/* The grid: Four equal columns that floats next to each other */
+.activeColumn {
+  float: left;
+  width: 25%;
+  padding: 10px;
+  border: 5px outset lightseagreen;
+}
+
+/* Style the images inside the grid */
+.activeColumn img {
+  opacity: 1.0; 
 }
 
 /* Clear floats after the columns */
